# Calculus-Of-Variations

./: README.md
Codes/Galerkin/: CMakeLists.txt  ToDo  calc_error.sh  main.c  plot_points.sh  run_valgrind.sh
Codes/Galerkin/linear-system-library/: linear-system-solver.c  linear-system-solver.h
Codes/Galerkin/newton-cotes-library/: newton-cotes-solver.c  newton-cotes-solver.h
Codes/Galerkin/problems-library/: CMakeLists.txt  problem1.c  problem1.h  problem2.c  problem2.h
Codes/Galerkin/results/problem-1/analit_error/: error2.txt  error3.txt  error5.txt
Codes/Galerkin/results/problem-1/aprox_error/: error1.txt  error2.txt  error3.txt  error4.txt  error5.txt
Codes/Galerkin/results/problem-2/analit_error/: error4.txt  error5.txt
Codes/Galerkin/results/problem-2/aprox_error/: error1.txt  error2.txt  error3.txt  error4.txt  error5.txt
Codes/Galerkin/scripts/: error.py  plot.py
Codes/Galerkin/solver/: CMakeLists.txt  linear-system.c  newton-cotes.c  newton-cotes.h  problem.c  problem.h  solver.c  solver.h
Codes/Lagrange-Multiplier/: Makefile  main.cpp  main2.cpp
Codes/Rayleigh-Ritz/: plot.py  ritz.py
Final-Assignment/Plot-Function/: plot.py
